update unique generated values to db